# A142886

./: Cargo.toml  DESIGN.md  FUTURE.md  LICENSE  PERFORMANCE.md  PLAN.md  README.md  b142886.txt
src/: connectivity.rs  enumerate.rs  lib.rs  main.rs  symmetry.rs  verify.rs
src/enumerate/: mod.rs  transfer.rs
