[package]
name = "a142886"
version = "0.1.0"
edition = "2021"
description = "Enumerate OEIS A142886: polyominoes with the full D8 (square) symmetry group"
license = "MIT OR Apache-2.0"

[features]
# Optional data-parallel enumeration over independent recursion subtrees.
parallel = ["dep:rayon"]

[dependencies]
rayon = { version = "1", optional = true }

[lib]
name = "a142886"
path = "src/lib.rs"

[[bin]]
name = "a142886"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
